# mlflow-triton-flavor

./: README.md  pyproject.toml  triton_flavor.py
mlflow_triton_flavor/: __init__.py  lib.py
