[tool.poetry]
name = "mlflow-triton-flavor"
version = "0.1.0"
description = ""
authors = ["Julian <julian.neeleman@eb.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
packages = [{ include = "mlflow_triton_flavor" }]
